--- a/src/bioimageio/workflows/static/envs/stardist.yaml
+++ b/src/bioimageio/workflows/static/envs/stardist.yaml
@@ -8,6 +8,9 @@ dependencies:
   - pip
   - pytest
   - pytest-asyncio
+  - stardist
+  - tensorflow==2.*
   - xarray
   - pip:
     - imjoy-rpc
+    - git+https://github.com/bioimage-io/workflows-bioimage-io-python.git
