--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test and Deploy bioimageio.core
+name: test
 
 on:
   push:
@@ -29,15 +29,12 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
-    - name: install dependencies
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Install Conda environment with Micromamba
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        auto-update-conda: true
-        mamba-version: "*"
-        channel-priority: strict
-        activate-environment: default
         environment-file: dev/env_default.yaml
-        python-version: ${{ matrix.python-version }}
+        extra-specs: |
+          python=${{ matrix.python-version }}
     - name: additional setup
       shell: bash -l {0}
       run: pip install --no-deps -e .
@@ -52,15 +49,12 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
-    - name: install dependencies
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Install Conda environment with Micromamba
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        auto-update-conda: true
-        mamba-version: "*"
-        channel-priority: strict
-        activate-environment: default
         environment-file: dev/env_default.yaml
-        python-version: ${{ matrix.python-version }}
+        extra-specs: |
+          python=${{ matrix.python-version }}
     - name: additional setup
       shell: bash -l {0}
       run: |
@@ -108,14 +102,15 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: setup conda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Install Conda environment with Micromamba
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        auto-update-conda: true
-        auto-activate-base: true
-        activate-environment: ""
+        environment-file: false
+        environment-name: build-env
+        channels: conda-forge
+        extra-specs: |
+          boa
     - name: linux conda build
       shell: bash -l {0}
       run: |
-        conda install -n base -c conda-forge conda-build pip -y
-        conda build -c conda-forge conda-recipe
+        conda mambabuild -c conda-forge conda-recipe
