--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   black:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Check files using the black formatter
         uses: rickstaa/action-black@v1
         id: action_black
@@ -28,10 +28,11 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Install Conda environment with Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
+        cache-downloads: true
         environment-file: dev/env_default.yaml
         extra-specs: |
           python=${{ matrix.python-version }}
@@ -48,10 +49,11 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Install Conda environment with Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
+        cache-downloads: true
         environment-file: dev/env_default.yaml
         extra-specs: |
           python=${{ matrix.python-version }}
@@ -99,12 +101,13 @@ jobs:
     needs: test-with-bioimage-core-conda
     steps:
     - name: checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
     - name: Install Conda environment with Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
+        cache-downloads: true
         environment-file: false
         environment-name: build-env
         channels: conda-forge
